--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,11 @@
+.DS_Store
 node_modules
-
-# Output
-.output
-.vercel
-.netlify
-.wrangler
-/.svelte-kit
 /build
 /dist
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Env
+/.svelte-kit
+/package
 .env
 .env.*
 !.env.example
-!.env.test
-
-# Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
