--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"url": "git+https://github.com/Konixy/better-svelte-email.git"
 	},
 	"peerDependencies": {
-		"svelte": "^5.14.3",
-		"@sveltejs/kit": "^2.0.0"
+		"svelte": ">5.14.3",
+		"@sveltejs/kit": ">=2"
 	},
 	"peerDependenciesMeta": {
 		"@sveltejs/kit": {
@@ -17,40 +17,42 @@
 	},
 	"dependencies": {
 		"html-to-text": "^9.0.5",
-		"magic-string": "^0.30.19",
-		"svelte-highlight": "^7.8.4",
+		"magic-string": "^0.30.21",
 		"tw-to-css": "^0.0.12"
 	},
 	"optionalDependencies": {
 		"prettier": "^3.6.2",
-		"resend": "^6.1.2"
+		"resend": "^6.2.2",
+		"shiki": "^3.14.0"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.37.0",
-		"@sveltejs/adapter-auto": "^6.1.1",
+		"@eslint/js": "^9.38.0",
 		"@sveltejs/adapter-vercel": "^6.0.0",
-		"@sveltejs/kit": "^2.43.8",
+		"@sveltejs/kit": "^2.47.3",
 		"@sveltejs/package": "^2.5.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@tailwindcss/vite": "^4.1.14",
+		"@tailwindcss/vite": "^4.1.16",
 		"@types/html-to-text": "^9.0.4",
-		"@types/node": "^24",
-		"eslint": "^9.37.0",
+		"@types/node": "^24.9.1",
+		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.4",
+		"eslint-plugin-svelte": "^3.12.5",
 		"globals": "^16.4.0",
-		"playwright": "^1.55.1",
+		"gsap": "^3.13.0",
+		"mdsvex": "^0.12.6",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.7.0",
-		"publint": "^0.3.13",
-		"svelte": "^5.39.8",
-		"svelte-check": "^4.3.2",
-		"tailwindcss": "^4.1.14",
+		"prettier-plugin-tailwindcss": "^0.7.1",
+		"publint": "^0.3.15",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
+		"svelte": "5.42.2",
+		"svelte-check": "^4.3.3",
+		"tailwindcss": "^4.1.16",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.45.0",
-		"vite": "^7.1.9",
-		"vitest": "^4.0.1"
+		"typescript-eslint": "^8.46.2",
+		"vite": "^7.1.12",
+		"vitest": "^4.0.3"
 	},
 	"exports": {
 		".": {
