fix: removed showcase emails from bundle

--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
 	"files": [
 		"dist",
 		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
+		"!dist/**/*.spec.*",
+		"!dist/emails"
 	],
 	"keywords": [
 		"svelte",
