--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Test and Release
+name: Test, Publish and Release
 
 on:
   push:
@@ -11,6 +11,7 @@ on:
 permissions:
   contents: write
   pull-requests: read
+  id-token: write
 
 jobs:
   test:
@@ -21,7 +22,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Fetch all history for changelog generation
+          fetch-depth: 0
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
@@ -37,8 +38,8 @@ jobs:
       - name: Run tests
         run: bun run test
 
-  release:
-    name: Create Release
+  publish:
+    name: Publish to NPM
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -47,13 +48,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Fetch all history for version comparison
+          fetch-depth: 0
           fetch-tags: true
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          registry-url: "https://registry.npmjs.org"
 
       - name: Get current version
         id: current_version
@@ -62,150 +69,71 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Current version: $VERSION"
 
-      - name: Check if version tag exists
-        id: check_tag
+      - name: Check if version is published
+        id: check_published
         run: |
-          if git rev-parse "v${{ steps.current_version.outputs.version }}" >/dev/null 2>&1; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "Version tag v${{ steps.current_version.outputs.version }} already exists"
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "Version tag v${{ steps.current_version.outputs.version }} does not exist"
-          fi
-
-      - name: Get previous version tag
-        id: previous_version
-        if: steps.check_tag.outputs.exists == 'false'
-        run: |
-          PREV_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-          if [ -z "$PREV_TAG" ]; then
-            echo "tag=" >> $GITHUB_OUTPUT
-            echo "No previous version tag found"
-          else
-            echo "tag=$PREV_TAG" >> $GITHUB_OUTPUT
-            echo "Previous version tag: $PREV_TAG"
-          fi
-
-      - name: Generate changelog
-        id: changelog
-        if: steps.check_tag.outputs.exists == 'false'
-        run: |
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
           VERSION="${{ steps.current_version.outputs.version }}"
-          PREV_TAG="${{ steps.previous_version.outputs.tag }}"
 
-          echo "Generating changelog from $PREV_TAG to HEAD"
-
-          # Create changelog file
-          CHANGELOG_FILE=$(mktemp)
-
-          echo "## 🚀 What's Changed in v$VERSION" >> $CHANGELOG_FILE
-          echo "" >> $CHANGELOG_FILE
-
-          if [ -z "$PREV_TAG" ]; then
-            # First release - list all commits
-            echo "### All Changes" >> $CHANGELOG_FILE
-            echo "" >> $CHANGELOG_FILE
-            git log --pretty=format:"- %s (%h)" --reverse >> $CHANGELOG_FILE
+          if npm view "$PACKAGE_NAME@$VERSION" version 2>/dev/null; then
+            echo "published=true" >> $GITHUB_OUTPUT
+            echo "📦 Version $VERSION is already published to npm"
           else
-            # Generate changelog from previous tag
-            COMMITS=$(git log $PREV_TAG..HEAD --pretty=format:"%s|%h|%an" --reverse)
-            
-            # Categorize commits
-            FEATURES=""
-            FIXES=""
-            DOCS=""
-            TESTS=""
-            CHORES=""
-            OTHER=""
-            
-            while IFS='|' read -r message hash author; do
-              # Skip merge commits
-              if [[ $message == Merge* ]]; then
-                continue
-              fi
-              
-              COMMIT_LINE="- $message ([${hash}](https://github.com/${{ github.repository }}/commit/${hash}))"
-              
-              if [[ $message == feat* ]] || [[ $message == feature* ]]; then
-                FEATURES="$FEATURES$COMMIT_LINE"$'\n'
-              elif [[ $message == fix* ]]; then
-                FIXES="$FIXES$COMMIT_LINE"$'\n'
-              elif [[ $message == docs* ]]; then
-                DOCS="$DOCS$COMMIT_LINE"$'\n'
-              elif [[ $message == test* ]]; then
-                TESTS="$TESTS$COMMIT_LINE"$'\n'
-              elif [[ $message == chore* ]] || [[ $message == build* ]] || [[ $message == ci* ]]; then
-                CHORES="$CHORES$COMMIT_LINE"$'\n'
-              else
-                OTHER="$OTHER$COMMIT_LINE"$'\n'
-              fi
-            done <<< "$COMMITS"
-            
-            # Add sections to changelog if they have content
-            if [ ! -z "$FEATURES" ]; then
-              echo "### ✨ Features" >> $CHANGELOG_FILE
-              echo "" >> $CHANGELOG_FILE
-              echo "$FEATURES" >> $CHANGELOG_FILE
-            fi
-            
-            if [ ! -z "$FIXES" ]; then
-              echo "### 🐛 Bug Fixes" >> $CHANGELOG_FILE
-              echo "" >> $CHANGELOG_FILE
-              echo "$FIXES" >> $CHANGELOG_FILE
-            fi
-            
-            if [ ! -z "$TESTS" ]; then
-              echo "### 🧪 Tests" >> $CHANGELOG_FILE
-              echo "" >> $CHANGELOG_FILE
-              echo "$TESTS" >> $CHANGELOG_FILE
-            fi
-            
-            if [ ! -z "$DOCS" ]; then
-              echo "### 📚 Documentation" >> $CHANGELOG_FILE
-              echo "" >> $CHANGELOG_FILE
-              echo "$DOCS" >> $CHANGELOG_FILE
-            fi
-            
-            if [ ! -z "$OTHER" ]; then
-              echo "### 🔄 Other Changes" >> $CHANGELOG_FILE
-              echo "" >> $CHANGELOG_FILE
-              echo "$OTHER" >> $CHANGELOG_FILE
-            fi
-            
-            # if [ ! -z "$CHORES" ]; then
-            #   echo "### 🔧 Maintenance" >> $CHANGELOG_FILE
-            #   echo "" >> $CHANGELOG_FILE
-            #   echo "$CHORES" >> $CHANGELOG_FILE
-            # fi
+            echo "published=false" >> $GITHUB_OUTPUT
+            echo "✨ Version $VERSION is not published yet"
           fi
 
-          echo "" >> $CHANGELOG_FILE
-          echo "---" >> $CHANGELOG_FILE
-          echo "" >> $CHANGELOG_FILE
-          echo "**Full Changelog**: https://github.com/${{ github.repository }}/compare/$PREV_TAG...v$VERSION" >> $CHANGELOG_FILE
+      - name: Install dependencies
+        if: steps.check_published.outputs.published == 'false'
+        run: bun install
 
-          # Output for GitHub Actions
-          {
-            echo 'body<<EOF'
-            cat $CHANGELOG_FILE
-            echo EOF
-          } >> $GITHUB_OUTPUT
+      - name: Build package
+        if: steps.check_published.outputs.published == 'false'
+        run: bun run prepack
 
-          echo "Changelog:"
-          cat $CHANGELOG_FILE
+      - name: Publish to NPM
+        if: steps.check_published.outputs.published == 'false'
+        run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Create Release
-        if: steps.check_tag.outputs.exists == 'false'
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: v${{ steps.current_version.outputs.version }}
-          name: v${{ steps.current_version.outputs.version }}
-          body: ${{ steps.changelog.outputs.body }}
-          draft: false
-          prerelease: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Skip release
-        if: steps.check_tag.outputs.exists == 'true'
+      - name: Skip publishing
+        if: steps.check_published.outputs.published == 'true'
         run: |
-          echo "⏭️ Skipping release - version v${{ steps.current_version.outputs.version }} already exists"
+          echo "⏭️ Skipping npm publish - version ${{ steps.current_version.outputs.version }} already published"
+
+    outputs:
+      version: ${{ steps.current_version.outputs.version }}
+      should_release: ${{ steps.check_published.outputs.published == 'false' }}
+
+  release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: publish
+    if: needs.publish.outputs.should_release == 'true'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Create and push tag
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a "v${{ needs.publish.outputs.version }}" -m "Release v${{ needs.publish.outputs.version }}"
+          git push origin "v${{ needs.publish.outputs.version }}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate changelog and create release
+        run: npx changelogithub
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
