--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
 
       - name: Get current version
         id: current_version
@@ -68,6 +68,23 @@ jobs:
           VERSION=$(node -p "require('./package.json').version")
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Current version: $VERSION"
+
+      - name: Detect prerelease tag
+        id: prerelease_tag
+        run: |
+          VERSION="${{ steps.current_version.outputs.version }}"
+
+          # Check if version contains a prerelease identifier (e.g., -alpha, -beta, -rc)
+          if [[ "$VERSION" =~ -([a-zA-Z]+)\. ]]; then
+            TAG="${BASH_REMATCH[1]}"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "is_prerelease=true" >> $GITHUB_OUTPUT
+            echo "📦 Detected prerelease version: $VERSION → dist-tag: $TAG"
+          else
+            echo "tag=latest" >> $GITHUB_OUTPUT
+            echo "is_prerelease=false" >> $GITHUB_OUTPUT
+            echo "📦 Stable version: $VERSION → dist-tag: latest"
+          fi
 
       - name: Check if version is published
         id: check_published
@@ -93,7 +110,7 @@ jobs:
 
       - name: Publish to NPM
         if: steps.check_published.outputs.published == 'false'
-        run: npm publish --provenance --access public
+        run: npm publish --provenance --access public --tag ${{ steps.prerelease_tag.outputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
