--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "better-svelte-email",
-	"version": "1.0.0-beta.2",
+	"version": "1.0.0",
 	"author": "Konixy",
 	"repository": {
 		"type": "git",
