--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	},
 	"dependencies": {
 		"html-to-text": "^9.0.5",
-		"parse5": "^8.0.0"
+		"parse5": "^8.0.0",
+		"tailwindcss": "^4.1.17"
 	},
 	"optionalDependencies": {
 		"prettier": "^3.6.2",
@@ -51,7 +52,6 @@
 		"rehype-slug": "^6.0.0",
 		"svelte": "5.43.14",
 		"svelte-check": "^4.3.4",
-		"tailwindcss": "^4.1.17",
 		"tailwindcss-motion": "^1.1.1",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.47.0",
