--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "better-svelte-email",
 	"description": "Svelte email renderer with Tailwind support",
-	"version": "1.0.3",
+	"version": "1.1.0-beta.0",
 	"author": "Konixy",
 	"repository": {
 		"type": "git",
