--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	},
 	"homepage": "https://better-svelte-email.konixy.fr",
 	"peerDependencies": {
-		"svelte": ">5.46.1",
+		"svelte": ">=5.14.3",
 		"@sveltejs/kit": ">=2"
 	},
 	"peerDependenciesMeta": {
